 * Adjust the size of panel labels on the "Account" form (Thibaud Colas)
 * Delay hiding the contents of the side panels when closing, so the animation is smoother (Thibaud Colas)
 * ListBlock now shows item-by-item differences when comparing versions (Tidiane Dia)
 * Implement a new design for chooser buttons with better accessibility (Thibaud Colas)
 * Fix: Make sure workflow timeline icons are visible in high-contrast mode (Loveth Omokaro)
 * Fix: Ensure authentication forms (login, password reset) have a visible border in Windows high-contrast mode (Loveth Omokaro)
 * Fix: Ensure visual consistency between buttons and links as buttons in Windows high-contrast mode (Albina Starykova)
 * Fix: references extraction for ChooserBlock (Alex Tomkins)
 * Fix: Incorrectly formatted link in the documentation for Wagtail community support (Bolarinwa Comfort Ajayi)
 * Fix: Text within status tags text will now resize correctly when customizing browser font size (Mary Ojo)
 * Fix: Ensure logo shows correctly on log in page in Windows high-contrast mode (Loveth Omokaro)
 * Fix: Comments notice background overflows its container (Yekasumah)
 * Fix: Ensure links within help blocks meet colour contrast guidelines for accessibility (Theresa Okoro)
 * Fix: Ensure the skip link (used for keyboard control) meets colour contrast guidelines for accessibility (Dauda Yusuf)
 * Fix: Ensure tag fields correctly show in both dark and light Windows high-contrast modes (Albina Starykova)
 * Fix: Ensure new tooltips & tooltip menus have visible borders and tip triangle in Windows high-contrast mode (Juliet Adeboye)
 * Fix: Ensure there is a visual difference of 'active/current link' vs normal links in Windows high-contrast mode (Mohammad Areeb)
 * Fix: Avoid issues where trailing whitespace could be accidentally removed in translations for new page & snippet headers (Florian Vogt)
 * Fix: Make sure minimap error indicators follow the minimap scrolling (Thibaud Colas)